maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:15: error: ')' expected but '}' found.
} 
^